--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ ipython-genutils==0.2.0
 ipywidgets==7.6.3
 jedi==0.18.0
 Jinja2==3.0.1
+joblib==1.0.1
 jsonschema==3.2.0
 jupyter==1.0.0
 jupyter-client==7.0.1
@@ -39,6 +40,7 @@ pandas==1.3.2
 pandocfilters==1.4.3
 parso==0.8.2
 pickleshare==0.7.5
+Pillow==8.3.1
 prometheus-client==0.11.0
 prompt-toolkit==3.0.20
 protobuf==3.17.3
@@ -53,12 +55,16 @@ pywinpty==1.1.3
 pyzmq==22.2.1
 qtconsole==5.1.1
 QtPy==1.10.0
+scikit-learn==0.24.2
+scipy==1.7.1
 Send2Trash==1.8.0
 six==1.16.0
 soupsieve==2.2.1
 terminado==0.11.1
 testpath==0.5.0
+threadpoolctl==2.2.0
 torch==1.9.0
+torchvision==0.10.0
 tornado==6.1
 traitlets==5.0.5
 typing-extensions==3.10.0.0
